# user_management_api-fastapi

./: .env.example  .flake8  .gitignore  README.md  ddd_used.md  pyproject.toml  requirements.txt  user_management_api.db
alembic/: env.py
alembic/versions/: 2d559bf0be54_initial.py  7914f2d7a59e_initial.py  84925d65368a_initial_setup.py  a25c14cfe408_initial.py  a712fdce443f_initial.py  b57993198bad_initial.py  ce50c731e407_initial_setup.py  db7d7a3c9e44_initial.py
src/: main.py
src/adapters/repositories/: user_repository.py
src/api/: main.py
src/api/controllers/: login_controller.py  user_controller.py
src/api/middleware/: jwt_middleware.py  logger_middleware.py
src/api/router/: __init__.py
src/api/routers/: __init__.py
src/api/routes/: login_router.py  system_router.py  user_router.py
src/core/configurations/: __init__.py  env_configuration.py
src/core/dtos/: base_dto.py  login_dto.py  user_dto.py
src/core/entities/: login_entity.py  user_entitie.py
src/core/enums/: database_enum.py  user_enum.py  user_permission_enum.py  user_role_enum.py  user_status_enum.py
src/core/exceptions/: __init__.py  base_exception.py  db_exception.py  dto_exception.py  exception_handler.py  jwt_exception.py  jwt_middleware_exception.py  login_exception.py  user_exception.py
src/core/middleware/: __init__.py  auth_middleware.py  jwt_middleware.py  logger_middleware.py
src/core/seeds/: __init__.py
src/data/models/: __init__.py
src/data/repositories/: __init__.py
src/data/repository/: __init__.py
src/domain/dtos/: __init__.py
src/domain/enums/: __init__.py
src/domain/use_cases/: __init__.py
src/dtos/user/: user_dto.py
src/infrastructure/dao/: user_db_commands.py  (+1 more)
src/usecases/: scheduler_usecase.py
src/utils/: __init__.py  any_utils.py  database_util.py  dot_env_util.py  jwt_util.py  logger_util.py  message_util.py  response_util.py
(+237 files in other folders)
