[project]
name = "user-management-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Marques",email = "66804324+mqsalx@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.6.2.post1)",
    "asn1crypto (==1.5.1)",
    "asyncpg (==0.30.0)",
    "click (==8.1.7)",
    "colorama (==0.4.6)",
    "dnspython (==2.7.0)",
    "email-validator (==2.2.0)",
    "fastapi (==0.115.5)",
    "flake8 (==7.1.1)",
    "flake8-pyproject (==1.2.3)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "httptools (==0.6.4)",
    "idna (==3.10)",
    "iniconfig (==2.0.0)",
    "isort (==5.13.2)",
    "mccabe (==0.7.0)",
    "mypy-extensions (==1.0.0)",
    "packaging (==24.2)",
    "pathspec (==0.12.1)",
    "pg8000 (==1.31.2)",
    "platformdirs (==4.3.6)",
    "pluggy (==1.5.0)",
    "psycopg2-binary (==2.9.10)",
    "pycodestyle (==2.12.1)",
    "pydantic (==2.10.2)",
    "pydantic-core (==2.27.1)",
    "pyflakes (==3.2.0)",
    "pyjwt (==2.10.1)",
    "pymysql (==1.1.1)",
    "pytest (==8.3.3)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "pyyaml (==6.0.2)",
    "scramp (==1.4.5)",
    "six (==1.16.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.36)",
    "starlette (==0.41.3)",
    "typing-extensions (==4.12.2)",
    "uvicorn (==0.32.1)",
    "watchfiles (==1.0.0)",
    "websockets (==14.1)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pytz (>=2025.2,<2026.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
